--- a/Front/cadastro.html
+++ b/Front/cadastro.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="azul">
-        <h1 class="logo">DEVZILLA</h1>
+        <h1 class="logo">S <img src="img/icons/LOGO.png">LAR</h1>
 
         <nav class="row btns_menu">
 
@@ -52,7 +52,7 @@
     <main class="login">
         <section class="container container_form">
             <div class="wrap_form">
-                <img src="./img/background_login.svg">
+                <img src="./img/background_login.svg" class="bg">
                 <form method="POST">
                     <h2>Seja bem vindo!</h2>
                     <small>Para continuar, por favor insira seus dados.</small>
@@ -117,7 +117,7 @@
                     </div>
                     <span class="erro erro_Confirmsenha">Senhas não correspondem!</span>
 
-                    <button onclick="validacaoFormulario(event)" style="cursor: pointer;" class="btn btn_purple arrow">Entrar</button>
+                    <a onclick="validacaoFormulario(event)" style="cursor: pointer;" class="btn btn_purple arrow">Entrar</a>
 
                     <a class="outros_links" href="#">Esqueceu a senha? <strong>clique aqui</strong></a>
                     <a class="outros_links" href="login.html">Já possui conta? <strong>clique aqui</strong></a>
