--- a/Front/login.html
+++ b/Front/login.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="azul">
-        <h1 class="logo">S <img src="img/icons/LOGO.png"> LAR</h1>
+        <h1 class="logo">S <img src="img/icons/LOGO.png">LAR</h1>
 
         <nav class="row btns_menu">
 
@@ -52,7 +52,7 @@
     <main class="login">
         <section class="container container_form">
             <div class="wrap_form">
-                <img class="img_login" src="./img/background_login.svg">
+                <img class="img_login" src="./img/background_login.svg" class="bg">
                 <form method="POST">
                     <h2>Bem vindo de volta!</h2>
                     <small>Para continuar, por favor insira seus dados.</small>
