--- a/Front/perfil.html
+++ b/Front/perfil.html
@@ -122,14 +122,14 @@
                         <label for="senha">Senha</label>
                         <div class="wrap_input">
                             <!-- <img src="./img/icons/icon_lock.svg"> -->
-                            <input type="password" value="AAA123" id="senha">
+                            <input type="password" value="Aaa123" id="senha">
                         </div>
                         <span class="erro erro_senha">Você precisa digitar uma senha válida!</span>
                         
                         <label for="Confirmsenha">Confirme a senha</label>
                         <div class="wrap_input">
                             <!-- <img src="./img/icons/icon_lock.svg"> -->
-                            <input type="password" value="AAA123" id="Confirmsenha">
+                            <input type="password" value="Aaa123" id="Confirmsenha">
                         </div>
                         <span class="erro erro_Confirmsenha">Senhas não correspondem!</span>
                     </form>
