--- a/Front/perfil.html
+++ b/Front/perfil.html
@@ -157,6 +157,16 @@
 
         <p>DevZilla | Todos os direitos reservados<sup>©</sup></p>
         <a href="mailto:devzillacompany@gmail.com">devzillacompany@gmail.com</a>
+        
+        <div class="row nomes_footer">
+            <ul class="social_media">
+                <li>ALÍCIA VITÓRIA GUIRADELO  – 96960</li>
+                <li>ANA CAROLINA DANTAS PRADO – 96997</li>
+                <li>ARTHUR FOSCHIANI DE SOUZA - 96525</li>
+                <li>MARIANA SANTOS FERNANDES DE SOUSA – 97503</li>
+                <li>LARAH RANGEL FELICIANO CORREA – 96384</li>
+            </ul>
+        </div>
     </footer>
     <script src="./js/script_validacao.js"></script>
     <script src="./js/script.js"></script>
